login,register page working

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -54,6 +54,11 @@
     font-weight: 500;
     cursor: pointer;
 }
+
+.loginButton:disabled{
+    cursor: not-allowed;
+}
+
 .loginForgot{
     text-align: center;
     color: #1775ee;
@@ -69,4 +74,8 @@
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
+}
+
+.loginRegisterButton:disabled{
+    cursor: not-allowed;
 }
