--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -71,3 +71,8 @@
     font-weight: 500;
     cursor: pointer;
 }
+.loginlink{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+}
