--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -1,5 +1,4 @@
 .share{
-    height: 170px;
     width: fit-content;
     border-radius: 10px;
     -webkit-box-shadow: -2px 4px 22px -10px rgba(0,0,0,1);
@@ -33,6 +32,7 @@ box-shadow: -2px 4px 22px -10px rgba(0,0,0,1);
 }
 .shareBottom{
     display: flex;
+    padding: 15px;
 }
 .shareOptions{
     display: flex;
@@ -63,3 +63,20 @@ box-shadow: -2px 4px 22px -10px rgba(0,0,0,1);
     font-weight: 500;
     cursor: pointer;
 }
+.shareImgContainer{
+    padding: 0 20px 10px 20px;
+    position: relative;
+  }
+  
+  .shareImg{
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .shareCancelImg{
+    position: absolute;
+    top: 0;
+    right: 20px;
+    cursor: pointer;
+    opacity: 0.7;
+  }
