--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -8,7 +8,7 @@
 }
 .loginWrapper{
     height: 75%; 
-    width: 75%; 
+    width: 90%; 
     display: flex;
 }
 .loginLeft, .loginRight{
@@ -78,4 +78,17 @@
 
 .loginRegisterButton:disabled{
     cursor: not-allowed;
+}
+@media screen and (max-width: 600px){
+    .loginWrapper{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .loginDesc{
+        display: none;
+    }
+    .loginLogo{
+        display: flex;
+        justify-content: center;
+    }
 }
